--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "yatt-langserver",
 	"displayName": "yatt-langserver",
 	"description": "Language Server for yatt",
+	"publisher": "hkoba",
 	"version": "0.0.1",
 	"engines": {
 		"vscode": "^1.33.0"
