--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
 	"description": "Language Server for yatt",
 	"publisher": "hkoba",
 	"repository": "https://github.com/hkoba/wip-vscode-yatt",
-	"version": "0.2.0",
+	"version": "0.2.1",
 	"license": "Artistic-2.0",
 	"engines": {
-		"vscode": "^1.33.0"
+		"vscode": "^1.56.0"
 	},
 	"categories": [
 		"Other"
@@ -72,17 +72,17 @@
 		"vscode:prepublish": "npm run compile",
 		"compile": "tsc -p ./",
 		"watch": "tsc -watch -p ./",
-		"postinstall": "node ./node_modules/vscode/bin/install",
 		"test": "npm run compile && node ./node_modules/vscode/bin/test"
 	},
 	"dependencies": {
-		"vscode-languageclient": "^4.1.4"
+		"vscode-languageclient": "^6.1.1"
 	},
 	"devDependencies": {
-		"typescript": "^3.3.1",
-		"vscode": "^1.1.28",
-		"tslint": "^5.12.1",
+		"@types/mocha": "^2.2.42",
 		"@types/node": "^10.12.21",
-		"@types/mocha": "^2.2.42"
+		"@types/vscode": "^1.56.0",
+		"tslint": "^5.12.1",
+		"typescript": "^3.3.1",
+		"vscode-test": "^1.5.2"
 	}
 }
