--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
 	"displayName": "yatt-langserver",
 	"description": "Language Server for yatt",
 	"publisher": "hkoba",
-	"repository": "https://github.com/hkoba/wip-vscode-yatt",
-	"version": "0.2.1",
+        "repository": {
+          "url": "git+https://github.com/hkoba/wip-vscode-yatt.git"
+        },
+	"version": "0.2.2",
 	"license": "Artistic-2.0",
 	"engines": {
 		"vscode": "^1.56.0"
